Removed horizontal scrolling, corrected contacts table and fixed font in textarea

--- a/sass/general/overall.scss
+++ b/sass/general/overall.scss
@@ -1,5 +1,9 @@
 // ----------------------- MOBILE -----------------------
 
+html {
+  overflow-x: hidden;
+}
+
 
 body {
   // indents
