--- a/sass/main/form/fieldset.scss
+++ b/sass/main/form/fieldset.scss
@@ -217,6 +217,8 @@
     padding: 14px;
     // borders
     border: 2px solid #000;
+    // font
+    font-family: inherit;
   }
 }
 
