--- a/sass/main/index/contacts.scss
+++ b/sass/main/index/contacts.scss
@@ -104,7 +104,7 @@
 
   .contacts__row {
     // display
-    display: inline-block;
+    display: table-cell;
     // size
     width: 50%;
     // font
